force-app/main/default/objects/Shadikhana_Booking__c/Shadikhana_Booking__c.object-meta.xml
<CustomObject>
    <description>Urdu Shadikhana venue booking reservations</description>
    <label>Shadikhana Booking</label>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shadikhana Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>