force-app/main/default/objects/Shadikhana_Booking__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shadikhana_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>