force-app/main/default/objects/Shadikhana_Booking__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <description>Date reserved for the Shadikhana. Only one booking per date is allowed.</description>
    <label>Booking Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>