force-app/main/default/objects/Shadikhana_Booking__c/fields/Catering_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Catering_Arrangement__c</fullName>
    <label>Catering Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Hall Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>