force-app/main/default/objects/Shadikhana_Booking__c/fields/Catering_Charge__c.field-meta.xml
<CustomField>
    <fullName>Catering_Charge__c</fullName>
    <label>Catering Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>