force-app/main/default/objects/Shadikhana_Booking__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>