force-app/main/default/objects/Shadikhana_Booking__c/fields/Decoration_Charge__c.field-meta.xml
<CustomField>
    <fullName>Decoration_Charge__c</fullName>
    <label>Decoration Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>