force-app/main/default/objects/Shadikhana_Booking__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>Event End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>