force-app/main/default/objects/Shadikhana_Booking__c/fields/Expected_Guest_Count__c.field-meta.xml
<CustomField>
    <fullName>Expected_Guest_Count__c</fullName>
    <label>Expected Guest Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>