force-app/main/default/objects/Shadikhana_Booking__c/fields/Hall_Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hall_Rental_Amount__c</fullName>
    <label>Hall Rental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>