force-app/main/default/objects/Shadikhana_Booking__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <label>Number of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>