force-app/main/default/objects/Shadikhana_Booking__c/validationRules/Confirmed_Booking_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmed_Booking_Locked</fullName>
    <active>true</active>
    <description>Once a booking is confirmed, the record cannot be changed or cancelled.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Confirmed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Confirmed bookings cannot be changed or cancelled.</errorMessage>
</ValidationRule>